# sessions-experiments

./: README.md
actix_session/: Cargo.toml  README.md
actix_session/css/: index.css
actix_session/public/css/: index.css
actix_session/src/: flash.rs  main.rs  once_session.rs  once_sessions_middleware.rs  stateful_session.rs
actix_session/www/: foo.hbs  index.hbs
handmade/: Cargo.toml  README.md
handmade/src/: main.rs  session_middleware.rs  sessions.rs
handmade/www/: foo.hbs  index.hbs
