[package]
name = "sessions-experiment"
version = "0.1.0"
edition = "2021"

[dependencies]
handlebars = { version = "6.2.0", features = ["dir_source"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.132"
actix-web = "4"
uuid = { version = "1.11.0", features = ["v4"] }
dashmap = "6.1.0"
futures-util = "0.3.31"
actix-files = "=0.6.6"
